@@ -3,7 +3,7 @@ use strict;
 use warnings;
 
 use base 'Krang::ElementClass';
-use Storable qw(freeze thaw);
+use Storable qw(nfreeze thaw);
 use MIME::Base64 qw(encode_base64 decode_base64);
 use Carp qw( croak );
 
@@ -20,7 +20,7 @@ sub freeze_data {
     my $element = $_[2];
     my $ret;
     if ($element->data) {
-        eval { $ret = encode_base64(freeze($element->data)) };
+        eval { $ret = encode_base64(nfreeze($element->data)) };
         croak("Problem freezing data: $@") if $@;
     }
     return $ret;
@@ -44,7 +44,7 @@ Krang::ElementClass::Storable - parent class for elements with complex data
 
 This module overrides the freeze_data and thaw_data methods in
 Krang::ElementClass to use Storable to handle complex data.  If you
-use this base class then you can story references and objects in C<<
+use this base class then you can store references and objects in C<<
 $element->data() >> with impunity.
 
 =head1 INTERFACE
